--- a/storage-scouter-sample/src/main/resources/application.properties
+++ b/storage-scouter-sample/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 armeria.ports[0].port=9411
 armeria.ports[0].protocols[0]=http
 zipkin.storage.type=scouter
+zipkin.storage.scouter.debug=true
+zipkin.storage.scouter.address=127.0.0.1
