--- a/autoconfigure-storage-scouter-udp/pom.xml
+++ b/autoconfigure-storage-scouter-udp/pom.xml
@@ -11,8 +11,6 @@
 
     <artifactId>zipkin-autoconfigure-storage-scouter-udp</artifactId>
     <name>Auto Configuration: Scouter UDP</name>
-
-    <description>Zipkin Scouter Autoconfigure UDP</description>
     <url>https://github.com/scouter-project/zipkin-scouter</url>
 
     <dependencies>
@@ -37,6 +35,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.4.3</version>
                 <executions>
                     <execution>
                         <goals>
